--- a/src/vs/workbench/browser/parts/editor/media/modalEditorPart.css
+++ b/src/vs/workbench/browser/parts/editor/media/modalEditorPart.css
@@ -57,8 +57,9 @@
 }
 
 .monaco-modal-editor-block .modal-editor-title {
-	grid-column: 2;
+	grid-column: 1;
 	font-size: 12px;
+	font-weight: 500;
 	color: var(--vscode-titleBar-activeForeground);
 	overflow: hidden;
 	text-overflow: ellipsis;
